Added username to devise registration form, as well as building posts from the current user in the controller

--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,6 +1,9 @@
 %h1 Post Show
 
 %h2= @post.title
+%p
+	Posted by  
+	%em= @post.user.username.capitalize
 %p= simple_format @post.content
 
 = link_to 'Edit', edit_post_path
