--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -2,6 +2,8 @@
 
 - @posts.each do |post|
 	%h2= link_to post.title, post
-	%p= time_ago_in_words(post.created_at)
-
+	%p 
+		Posted
+		= time_ago_in_words(post.created_at)
+		ago
 
