--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,9 +1,9 @@
-%h2  19 Seconds Posts
-
-- @posts.each do |post|
-	%h2= link_to post.title, post
-	%p 
-		Posted
-		= time_ago_in_words(post.created_at)
-		ago
+#posts
+	- @posts.each do |post|
+		.post
+			%h2.title= link_to post.title, post
+			%p.date 
+				Posted
+				= time_ago_in_words(post.created_at)
+				ago
 
