added custom buttons depending on whether the user is signed in

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -2,7 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-
 $dark: #1F3338;
 $light: #52A4AD;
 
@@ -113,6 +112,9 @@ body {
 hr {
 	width: 90%;
 	border: none;
-	border-bottom: 1px solid #52A4AD;
+	border-bottom: 1px solid $light;
 	margin: 0 auto;
 }
+
+// ******* Post Show Page
+
