--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,8 +16,11 @@
         %p= link_to '19 seconds forum', root_path
       .buttons
         %p
-          = link_to 'New Topic', new_post_path
-          = link_to 'Log Out', destroy_user_session_path, method: :delete 
+          - if current_user
+            = link_to 'New Topic', new_post_path
+            = link_to 'Log Out', destroy_user_session_path, method: :delete
+          - else
+            = link_to 'Sign In', new_user_session_path
   %hr/
   .wrapper
     %p.notice= notice
