--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -2,13 +2,15 @@
 	%h1= @post.title
 
 	%p.date 
-		Posted
-		= time_ago_in_words(@post.created_at)
-		ago
+		%em 
+			Posted
+			= time_ago_in_words(@post.created_at)
+			ago
 
 	%p= simple_format @post.content
 %hr/
 %br/
-= link_to 'Edit', edit_post_path
-= link_to 'Delete', @post, method: :delete, data: {confirm: 'Are you sure?'}
-= link_to 'Home', root_path
+.buttons
+	= link_to 'Edit', edit_post_path
+	= link_to 'Delete', @post, method: :delete, data: {confirm: 'Are you sure?'}
+	= link_to 'Home', root_path
