--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,4 +1,4 @@
-.post
+#post
 	%h1= @post.title
 
 	%p.date 
@@ -8,9 +8,9 @@
 			ago
 
 	%p= simple_format @post.content
-%hr/
-%br/
-.buttons
-	= link_to 'Edit', edit_post_path
-	= link_to 'Delete', @post, method: :delete, data: {confirm: 'Are you sure?'}
-	= link_to 'Home', root_path
+	%br/
+	- if current_user == @post.user
+		= link_to 'Edit', edit_post_path
+		= link_to 'Delete', @post, method: :delete, data: {confirm: 'Are you sure?'}
+	%hr/
+	%br/
