--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,6 +20,7 @@
             = link_to 'New Topic', new_post_path
             = link_to 'Log Out', destroy_user_session_path, method: :delete
           - else
+            = link_to 'Sign Up', new_user_registration_path
             = link_to 'Sign In', new_user_session_path
   %hr/
   .wrapper
